# whenitrains

./: .gitignore  AGENTS.md  README.md  experiments-status.md  hk-high-temp-latency-status.md  hk-high-temp-latency.status.md  mvp.status.md  pyproject.toml  status.md  useful-commands.md
docs/: hk-high-temp-latency-spec.md  live-trading.md  low-latency-live-evidence-handoff.md  low-latency-live-runbook.md  low-latency-readiness-audit.md  low-latency-readiness-roadmap.md  milestone-files.md  orderbook-hot-table.md  specs.md
src/whenitrains/: __init__.py  alerting.py  backtest.py  candidate_planner.py  cli.py  config.py  dashboard_server.py  engine.py  execution_scheduler.py  forecast_accuracy.py  hko.py  hourly_accuracy.py  ladder_metadata.py  live.py  live_runtime.py  live_user_stream.py  low_latency.py  market_websocket.py  markets.py  operational.py  orderbook_cache.py  paper.py  paper_db.py  polymarket.py  runner.py  scheduler.py  signals.py  storage.py  user_websocket.py
tests/: test_alerting.py  test_backtest.py  test_candidate_planner.py  test_cli.py  test_dashboard_server.py  test_engine.py  test_execution_scheduler.py  test_experiments.py  test_forecast_accuracy.py  test_hko.py  test_hourly_accuracy.py  test_ladder_metadata.py  test_latency_report.py  test_live.py  test_live_runtime.py  test_live_user_stream.py  test_low_latency.py  test_market_websocket.py  test_markets.py  test_operational_readiness.py  test_orderbook_cache.py  test_paper.py  test_recorded_fixtures.py  test_runner.py  test_scheduler.py  test_signal.py  test_storage.py  test_user_websocket.py
(+9 files in other folders)
